# NanoKVM_OCR

./: README.md
models/pp_ocr/: ch_PP_OCRv3_det_npu.axmodel  ch_PP_OCRv4_rec_npu.axmodel  pp_ocr.mud  pp_ocr_v4.mud
ocr_pipline/: CMakeLists.txt
ocr_pipline/components/: CMakeLists.txt
ocr_pipline/components/log/: CMakeLists.txt  log.cpp  log.h
ocr_pipline/components/ocr_det/: ocr_det.cpp  ocr_det.h
ocr_pipline/components/ocr_image/: ocr_image.cpp  ocr_image.h
ocr_pipline/components/ocr_rec/: ocr_rec.cpp  ocr_rec.h
ocr_pipline/components/result_writer/: result_writer.cpp
ocr_pipline/docs/: Jpeg 截图获取方法.md  MCP 服务对接.md  jpeg获取方法python脚本.md
ocr_pipline/image_getting/: CMakeLists.txt  README.md  main.cpp
ocr_pipline/ocr_process/: CMakeLists.txt  ocr_process.cpp
ocr_pipline/src/: main.cpp
ocr_pipline/test/: CMakeLists.txt  test_rec.cpp
ocr_pipline/test_pipline/: CMakeLists.txt  ocr_pipline.cpp
ocr_pipline/test_rec/: README.md  TEST_REC.md
